2007-09-06	Daniel Hellstrom <daniel@gaisler.com>

	* shared/pci/pcifinddevice.c: New file.

2007-09-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/uart/apbuart.c: Fix some warnings.

2007-09-06	Daniel Hellstrom <daniel@gaisler.com>

	New drivers: PCI, b1553BRM, SpaceWire(GRSPW), CAN (GRCAN,OC_CAN),
	Raw UART.
	* shared/1553/b1553brm.c, shared/1553/b1553brm_pci.c,
	shared/1553/b1553brm_rasta.c, shared/can/grcan.c,
	shared/can/grcan_rasta.c, shared/can/occan.c, shared/can/occan_pci.c,
	shared/spw/grspw.c, shared/spw/grspw_pci.c, shared/spw/grspw_rasta.c,
	shared/uart/apbuart.c, shared/uart/apbuart_pci.c,
	shared/uart/apbuart_rasta.c: New files missed in previous commit.

2007-09-06	Daniel Hellstrom <daniel@gaisler.com>

	* Makefile.am: Add the following new drivers: PCI, b1553BRM,
	SpaceWire(GRSPW), CAN (GRCAN,OC_CAN), Raw UART.
	* shared/include/apbuart.h, shared/include/apbuart_pci.h,
	shared/include/apbuart_rasta.h, shared/include/b1553brm.h,
	shared/include/b1553brm_pci.h, shared/include/b1553brm_rasta.h,
	shared/include/debug_defs.h, shared/include/grcan.h,
	shared/include/grcan_rasta.h, shared/include/grcan_spwrtc.h,
	shared/include/grspw.h, shared/include/grspw_pci.h,
	shared/include/grspw_rasta.h, shared/include/occan.h,
	shared/include/occan_pci.h, shared/include/pci.h: New files.


2007-09-05	Daniel Hellstrom <daniel@gaisler.com>

	* shared/bspstart.c: LEON2 and LEON3 Data cache snooping detection on
	startup, for drivers. (LEON2,3 are configurable processors, they can
	be with or without DCache snooping. Caches without snooping needs the
	drivers to flush cache or use the sparc instruction lda to force
	cache miss...)

2007-09-05	Daniel Hellstrom <daniel@gaisler.com>

	* shared/amba/ambapp.c, shared/include/ambapp.h: New files.

2007-09-05	Daniel Hellstrom <daniel@gaisler.com>

	* Makefile.am: LEON3 AMBA PnP bus scanning moved to shared/amba/amba.c
	and shared/include/ambapp.h. The AMBA scanning was improved to take